--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,11 +12,16 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">{{ page.title }}</h1>
+      <a href="http://lowrie.github.io/pyRouterJig/documentation.html" class="btn">Documentation Home</a>
+      <a href="https://github.com/lowrie/pyRouterJig" class="btn">pyRouterJig Home</a>
     </section>
     <section class="main-content">
     {{ content }}
     </section>
 <footer class="site-footer">
+   <span><a href="http://lowrie.github.io/pyRouterJig/documentation.html">Documentation
+   Home</a></span><br>
+   <span><a href="https://github.com/lowrie/pyRouterJig">pyRouterJig Home</a></span>
    <span class="site-footer-owner"><a href="https://github.com/lowrie/pyRouterJig">pyRouterJig</a> is maintained by <a href="https://github.com/lowrie">lowrie</a>.</span>
 </footer>
 </body>
